register page validators, warning message, fixed shared module

--- a/src/app/pages/register/register.page.scss
+++ b/src/app/pages/register/register.page.scss
@@ -9,3 +9,21 @@ ion-content{
 ion-button{
     margin:10px;
 }
+
+input.ng-invalid.ng-touched {
+    border-bottom: 2px solid red;
+  }
+  
+  input.ng-valid.ng-touched {
+    border-bottom: 2px solid green;
+  }
+
+  /* Add these styles to handle input border color */
+ion-item ion-input.ng-invalid.ng-touched {
+    border-bottom: 2px solid red;
+  }
+  
+  ion-item ion-input.ng-valid.ng-touched {
+    border-bottom: 2px solid rgb(82, 183, 82);
+  }
+  
