--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -11,8 +11,8 @@
   <ion-card>
     <ion-card-header>
       <ion-item>
-      <ion-card-title>Welcome, please fill out your data</ion-card-title>
-    </ion-item>
+        <ion-card-title>Welcome, please fill out your data</ion-card-title>
+      </ion-item>
     </ion-card-header>
     <ion-card-content>
       <ion-list>
@@ -21,7 +21,6 @@
             <ion-label>I wanna buy</ion-label>
             <ion-radio value="customer" justify="end"></ion-radio>
           </ion-item>
-
           <ion-item>
             <ion-label>I wanna sell</ion-label>
             <ion-radio value="client" justify="end"></ion-radio>
@@ -31,63 +30,121 @@
     </ion-card-content>
   </ion-card>
 
-  <ion-card>
-    <ion-card-header>
-      <ion-card-title>Contact</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      <ion-item>
-        <ion-label position="floating">Name</ion-label>
-        <ion-input type="text" required></ion-input>
-      </ion-item>
+  <form [formGroup]="registerForm.getForm()">
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Contact</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <ion-item>
+          <ion-label position="floating">Name</ion-label>
+          <ion-input type="text" formControlName="name" required></ion-input>
+        </ion-item>
+        <app-error-message
+          [field]="registerForm.getForm().get('name')"
+          error="required"
+          message="Name is mandatory!"
+        ></app-error-message>
+        
+        <ion-item>
+          <ion-label position="floating">Email</ion-label>
+          <ion-input type="email" formControlName="email" required></ion-input>
+        </ion-item>
+        <app-error-message
+          [field]="registerForm.getForm().get('email')"
+          error="required"
+          message="Email is mandatory!"
+        ></app-error-message>
+        <app-error-message
+          [field]="registerForm.getForm().get('email')"
+          error="email"
+          message="Email is invalid!"
+        ></app-error-message>
+        
+        <ion-item>
+          <ion-label position="floating">Password</ion-label>
+          <ion-input type="password" formControlName="password" required></ion-input>
+        </ion-item>
+        <app-error-message
+          [field]="registerForm.getForm().get('password')"
+          error="required"
+          message="Password is mandatory!"
+        ></app-error-message>
+        <app-error-message
+          [field]="registerForm.getForm().get('password')"
+          error="minlength"
+          message="Minimum password has to be 6!"
+        ></app-error-message>
+        
+        <ion-item>
+          <ion-label position="floating">Confirm password</ion-label>
+          <ion-input type="password" formControlName="repeatPassword" required></ion-input>
+        </ion-item>
+        <app-error-message
+          [field]="registerForm.getForm().get('repeatPassword')"
+          error="isntMatching"
+          message="Password has to be same!"
+        ></app-error-message>
+        
+        <ion-item>
+          <ion-label position="floating">Phone number</ion-label>
+          <ion-input type="tel" formControlName="phone" required></ion-input>
+        </ion-item>
+        <app-error-message
+          [field]="registerForm.getForm().get('phone')"
+          error="required"
+          message="Phone number is mandatory!"
+        ></app-error-message>
+      </ion-card-content>
+    </ion-card>
 
-      <ion-item>
-        <ion-label position="floating">Email</ion-label>
-        <ion-input type="email" required></ion-input>
-      </ion-item>
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Address</ion-card-title>
+      </ion-card-header>
+      <ion-card-content formGroupName="address">
+        <ion-item>
+          <ion-label position="floating">Street</ion-label>
+          <ion-input type="text" formControlName="street" required></ion-input>
+        </ion-item>
+        <app-error-message
+  [field]="registerForm?.getForm()?.get('address')?.get('street') ?? null"
+  error="required"
+  message="Street is mandatory!"
+></app-error-message>
+        
+        <ion-item>
+          <ion-label position="floating">Number</ion-label>
+          <ion-input type="tel" formControlName="number" required></ion-input>
+        </ion-item>
+        <app-error-message
+  [field]="registerForm?.getForm()?.get('address')?.get('number') ?? null"
+  error="required"
+  message="Number is mandatory!"
+></app-error-message>
+        
+        <ion-item>
+          <ion-label position="floating">Neighborhood</ion-label>
+          <ion-input type="text" formControlName="neighborhood" required></ion-input>
+        </ion-item>
+        <app-error-message
+  [field]="registerForm?.getForm()?.get('address')?.get('neighborhood') ?? null"
+  error="required"
+  message="Neighborhood is mandatory!"
+></app-error-message>
+        
+        <ion-item>
+          <ion-label position="floating">Complement</ion-label>
+          <ion-input type="text" formControlName="complement" required></ion-input>
+        </ion-item>
+        <app-error-message
+  [field]="registerForm?.getForm()?.get('address')?.get('complement') ?? null"
+  error="required"
+  message="Complement is mandatory!"
+></app-error-message>
+      </ion-card-content>
+    </ion-card>
 
-      <ion-item>
-        <ion-label position="floating">Password</ion-label>
-        <ion-input type="password" required></ion-input>
-      </ion-item>
-
-      <ion-item>
-        <ion-label position="floating">Confirm password</ion-label>
-        <ion-input type="password" required></ion-input>
-      </ion-item>
-
-      <ion-item>
-        <ion-label position="floating">Phone number</ion-label>
-        <ion-input type="tel" required></ion-input>
-      </ion-item>
-    </ion-card-content>
-  </ion-card>
-  <ion-card>
-    <ion-card-header>
-      <ion-card-title>Address</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      <ion-item>
-        <ion-label position="floating">Address</ion-label>
-        <ion-input type="text" required></ion-input>
-      </ion-item>
-
-      <ion-item>
-        <ion-label position="floating">Number</ion-label>
-        <ion-input type="tel" required></ion-input>
-      </ion-item>
-
-      <ion-item>
-        <ion-label position="floating">Neighborhood</ion-label>
-        <ion-input type="text" required></ion-input>
-      </ion-item>
-
-      <ion-item>
-        <ion-label position="floating">Complement</ion-label>
-        <ion-input type="text" required></ion-input>
-      </ion-item>
-    </ion-card-content>
-  </ion-card>
-
-  <ion-button size="full" color="light" type="submit" (click)="register()">Register</ion-button>
+    <ion-button size="full" color="light" type="submit" (click)="register()">Register</ion-button>
+  </form>
 </ion-content>
