--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -1,22 +1,14 @@
-<ion-header [translucent]="true">
-  <ion-toolbar color="secondary">
+<ion-header>
+  <ion-toolbar color="success">
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/login"></ion-back-button>
+      <ion-back-button title=""></ion-back-button>
     </ion-buttons>
-    <ion-title>REGISTER</ion-title>
+    <ion-title>Register</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-card>
-    <ion-card-header>
-      <ion-item>
-        <ion-card-title>Welcome, please fill out your data</ion-card-title>
-      </ion-item>
-    </ion-card-header>
-  </ion-card>
-
-  <form [formGroup]="registerForm.getForm()">
+  <form [formGroup]="registerForm.getForm()!">
     <ion-card>
       <ion-card-header>
         <ion-card-title>Contact</ion-card-title>
@@ -24,159 +16,75 @@
       <ion-card-content>
         <ion-item>
           <ion-label position="floating">Name</ion-label>
-          <ion-input type="text" formControlName="name" required></ion-input>
+          <ion-input type="text" formControlName="name"></ion-input>
         </ion-item>
-        <app-error-message
-          [field]="registerForm.getForm().get('name')"
-          error="required"
-          message="Name is mandatory!"
-        ></app-error-message>
-
+        <app-error-message [field]="registerForm.getForm()!.get('name')!" error="required" message="Name is mandatory"></app-error-message>
         <ion-item>
           <ion-label position="floating">Email</ion-label>
-          <ion-input type="email" formControlName="email" required></ion-input>
+          <ion-input type="email" formControlName="email"></ion-input>
         </ion-item>
-        <app-error-message
-          [field]="registerForm.getForm().get('email')"
-          error="required"
-          message="Email is mandatory!"
-        ></app-error-message>
-        <app-error-message
-          [field]="registerForm.getForm().get('email')"
-          error="email"
-          message="Email is invalid!"
-        ></app-error-message>
-
+        <app-error-message [field]="registerForm.getForm()!.get('email')!" error="required" message="Email is mandatory"></app-error-message>
+        <app-error-message [field]="registerForm.getForm()!.get('email')!" error="email" message="Email is invalid"></app-error-message>
         <ion-item>
           <ion-label position="floating">Password</ion-label>
-          <ion-input
-            type="password"
-            formControlName="password"
-            required
-          ></ion-input>
+          <ion-input type="password" formControlName="password"></ion-input>
         </ion-item>
-        <app-error-message
-          [field]="registerForm.getForm().get('password')"
-          error="required"
-          message="Password is mandatory!"
-        ></app-error-message>
-        <app-error-message
-          [field]="registerForm.getForm().get('password')"
-          error="minlength"
-          message="Minimum password has to be 6!"
-        ></app-error-message>
-
+        <app-error-message [field]="registerForm.getForm()!.get('password')!" error="required" message="Password is mandatory"></app-error-message>
+        <app-error-message [field]="registerForm.getForm()!.get('password')!" error="minlength" message="Minimum of 6 characters"></app-error-message>
         <ion-item>
           <ion-label position="floating">Confirm password</ion-label>
-          <ion-input
-            type="password"
-            formControlName="repeatPassword"
-            required
-          ></ion-input>
+          <ion-input type="password" formControlName="repeatPassword"></ion-input>
         </ion-item>
-        <app-error-message
-          [field]="registerForm.getForm().get('repeatPassword')"
-          error="isntMatching"
-          message="Password has to be same!"
-        ></app-error-message>
-
+        <app-error-message [field]="registerForm.getForm()!.get('repeatPassword')!" error="isntMatching" message="Password and repeat password are different"></app-error-message>
         <ion-item>
           <ion-label position="floating">Phone number</ion-label>
-          <ion-input type="tel" formControlName="phone" required></ion-input>
+          <ion-input type="tel" formControlName="phone"></ion-input>
         </ion-item>
-        <app-error-message
-          [field]="registerForm.getForm().get('phone')"
-          error="required"
-          message="Phone number is mandatory!"
-        ></app-error-message>
+        <app-error-message [field]="registerForm.getForm()!.get('phone')!" error="required" message="Phone is mandatory"></app-error-message>
       </ion-card-content>
     </ion-card>
-
     <ion-card>
       <ion-card-header>
-        <ion-card-title>Address</ion-card-title>
+        <ion-card-title>Address information</ion-card-title>
       </ion-card-header>
       <ion-card-content formGroupName="address">
         <ion-item>
-          <ion-label position="floating">Street</ion-label>
-          <ion-input type="text" formControlName="street" required></ion-input>
+          <ion-label position="floating">Address</ion-label>
+          <ion-input type="text" formControlName="street"></ion-input>
         </ion-item>
-        <app-error-message
-          [field]="registerForm?.getForm()?.get('address')?.get('street') ?? null"
-          error="required"
-          message="Street is mandatory!"
-        ></app-error-message>
-
+        <app-error-message [field]="registerForm.getForm()!.get('address')!.get('street')" error="required" message="Street is mandatory"></app-error-message>
         <ion-item>
           <ion-label position="floating">Number</ion-label>
-          <ion-input type="tel" formControlName="number" required></ion-input>
+          <ion-input type="tel" formControlName="number"></ion-input>
         </ion-item>
-        <app-error-message
-          [field]="registerForm?.getForm()?.get('address')?.get('number') ?? null"
-          error="required"
-          message="Number is mandatory!"
-        ></app-error-message>
-
+        <app-error-message [field]="registerForm.getForm()!.get('address')!.get('number')" error="required" message="Number is mandatory"></app-error-message>
         <ion-item>
           <ion-label position="floating">Neighborhood</ion-label>
-          <ion-input
-            type="text"
-            formControlName="neighborhood"
-            required
-          ></ion-input>
+          <ion-input type="text" formControlName="neighborhood"></ion-input>
         </ion-item>
-        <app-error-message
-          [field]="registerForm?.getForm()?.get('address')?.get('neighborhood') ?? null"
-          error="required"
-          message="Neighborhood is mandatory!"
-        ></app-error-message>
-
-        <ion-item>
-          <ion-label position="floating">City</ion-label>
-          <ion-input type="text" formControlName="city" required></ion-input>
-        </ion-item>
-        <app-error-message
-          [field]="registerForm?.getForm()?.get('address')?.get('city') ?? null"
-          error="required"
-          message="City is mandatory!"
-        ></app-error-message>
-
-        <ion-item>
-          <ion-label position="floating">State</ion-label>
-          <ion-input type="text" formControlName="state" required></ion-input>
-        </ion-item>
-        <app-error-message
-          [field]="registerForm?.getForm()?.get('address')?.get('state') ?? null"
-          error="required"
-          message="State is mandatory!"
-        ></app-error-message>
-
-        <ion-item>
-          <ion-label position="floating">Zipcode</ion-label>
-          <ion-input type="text" formControlName="zipcode" required></ion-input>
-        </ion-item>
-        <app-error-message
-          [field]="registerForm?.getForm()?.get('address')?.get('zipcode') ?? null"
-          error="required"
-          message="Zipcode is mandatory!"
-        ></app-error-message>
-
+        <app-error-message [field]="registerForm.getForm()!.get('address')!.get('neighborhood')" error="required" message="Neighborhood is mandatory"></app-error-message>
         <ion-item>
           <ion-label position="floating">Complement</ion-label>
-          <ion-input
-            type="text"
-            formControlName="complement"
-            required
-          ></ion-input>
+          <ion-input type="text" formControlName="complement"></ion-input>
         </ion-item>
-        <app-error-message
-          [field]="registerForm?.getForm()?.get('address')?.get('complement') ?? null"
-          error="required"
-          message="Complement is mandatory!"
-        ></app-error-message>
+        <app-error-message [field]="registerForm.getForm()!.get('address')!.get('complement')" error="required" message="Complement is mandatory"></app-error-message>
+        <ion-item>
+          <ion-label position="floating">Zip Code</ion-label>
+          <ion-input type="text" formControlName="zipCode"></ion-input>
+        </ion-item>
+        <app-error-message [field]="registerForm.getForm()!.get('address')!.get('zipCode')" error="required" message="Zip Code is mandatory"></app-error-message>
+        <ion-item>
+          <ion-label position="floating">State</ion-label>
+          <ion-input type="text" formControlName="state"></ion-input>
+        </ion-item>
+        <app-error-message [field]="registerForm.getForm()!.get('address')!.get('state')" error="required" message="State is mandatory"></app-error-message>
+        <ion-item>
+          <ion-label position="floating">City</ion-label>
+          <ion-input type="text" formControlName="city"></ion-input>
+        </ion-item>
+        <app-error-message [field]="registerForm.getForm()!.get('address')!.get('city')" error="required" message="City is mandatory"></app-error-message>
       </ion-card-content>
     </ion-card>
-
-    <ion-button size="full" color="light" type="submit" (click)="register()">Register</ion-button>
+    <ion-button size="full" color="light" (click)="register()">Register</ion-button>
   </form>
 </ion-content>
