--- a/src/app/pages/register/register.page.scss
+++ b/src/app/pages/register/register.page.scss
@@ -1,29 +1,7 @@
-ion-button[color="dark"]{
-    text-transform: initial;
+ion-content {
+    --background: var(--ion-color-success);
 }
 
-ion-content{
-    --background: var(--ion-color-secondary); //pengaturan warna background
+ion-button {
+    margin: 10px;
 }
-
-ion-button{
-    margin:10px;
-}
-
-input.ng-invalid.ng-touched {
-    border-bottom: 2px solid red;
-  }
-  
-  input.ng-valid.ng-touched {
-    border-bottom: 2px solid green;
-  }
-
-  /* Add these styles to handle input border color */
-ion-item ion-input.ng-invalid.ng-touched {
-    border-bottom: 2px solid red;
-  }
-  
-  ion-item ion-input.ng-valid.ng-touched {
-    border-bottom: 2px solid rgb(82, 183, 82);
-  }
-  
